{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 21,
  "lineage": "1b1dfd16-20cc-c8ef-81dd-e891b246ff4c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4e2c17f7-6b1d-4962-8f56-7676048bcbd1/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/example-nic",
            "internal_domain_name_suffix": "k0y3lttfjduujog3f15kfgnktd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4e2c17f7-6b1d-4962-8f56-7676048bcbd1/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/example-public-ip",
                "subnet_id": "/subscriptions/4e2c17f7-6b1d-4962-8f56-7676048bcbd1/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/example-subnet"
              }
            ],
            "location": "eastus",
            "name": "example-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "example-resources"
          },
          "dependencies": [
            "azurerm_public_ip.example",
            "azurerm_resource_group.example",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4e2c17f7-6b1d-4962-8f56-7676048bcbd1/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg",
            "location": "eastus",
            "name": "example-nsg",
            "resource_group_name": "example-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/4e2c17f7-6b1d-4962-8f56-7676048bcbd1/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "example-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "example-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.example",
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4e2c17f7-6b1d-4962-8f56-7676048bcbd1/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/example-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "example-public-ip",
            "resource_group_name": "example-resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4e2c17f7-6b1d-4962-8f56-7676048bcbd1/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/example-subnet",
            "name": "example-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "example-resources",
            "virtual_network_name": "example-network"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4e2c17f7-6b1d-4962-8f56-7676048bcbd1/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/example-subnet",
            "network_security_group_id": "/subscriptions/4e2c17f7-6b1d-4962-8f56-7676048bcbd1/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg",
            "subnet_id": "/subscriptions/4e2c17f7-6b1d-4962-8f56-7676048bcbd1/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/example-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.example",
            "azurerm_resource_group.example",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ced5b156-4865-44e9-b8dd-2efea299aa9b",
            "id": "/subscriptions/4e2c17f7-6b1d-4962-8f56-7676048bcbd1/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network",
            "location": "eastus",
            "name": "example-network",
            "resource_group_name": "example-resources",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/4e2c17f7-6b1d-4962-8f56-7676048bcbd1/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/example-subnet",
                "name": "example-subnet",
                "security_group": "/subscriptions/4e2c17f7-6b1d-4962-8f56-7676048bcbd1/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    }
  ]
}